--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -54,6 +54,9 @@ a{
 .css-1pw38g8-MuiButtonBase-root-MuiButton-root:hover {
   background-color: var(--secondary) !important;
 }
+.css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root.Mui-checked, .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root.MuiCheckbox-indeterminate {
+  color: var(--primary) !important;
+}
 /* Scrollbar */
 
 /* width */
